--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "wp-docker"
-version = "0.1.0"
+version = "0.1.1"
 description = "WordPress Docker Installer CLI tool with Docker setup and preconfigured theme"
 authors = [{ name = "Jacek Labudda" }]
 readme = "README.md"
@@ -10,12 +10,12 @@ keywords = ["wordpress", "docker", "installer", "cli", "wp"]
 dependencies = ["python-dotenv>=1.0.0"]
 
 [project.scripts]
-wp-docker = "wp_docker_cli.cli:main"
+wp-docker = "wp_docker.cli:main"
 
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-where = ["wp_docker_cli"]
+where = ["wp_docker"]
 include = ["*"]
