--- a/wp_docker/templates/.env.example
+++ b/wp_docker/templates/.env.example
@@ -31,3 +31,12 @@ PHP_FPM_PM_MAX_CHILDREN=1000
 PHP_OPCACHE_ENABLE=1
 
 WP_ENV=local
+
+WORDPRESS_AUTH_KEY=
+WORDPRESS_SECURE_AUTH_KEY=
+WORDPRESS_LOGGED_IN_KEY=
+WORDPRESS_NONCE_KEY=
+WORDPRESS_AUTH_SALT=
+WORDPRESS_SECURE_AUTH_SALT=
+WORDPRESS_LOGGED_IN_SALT=
+WORDPRESS_NONCE_SALT=
