--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,25 @@
+[build-system]
+requires = ["setuptools>=69", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
-name = "wp-docker"
+name = "wp-docker-cli"
 version = "0.1.3"
-description = "WordPress Docker Installer CLI tool with Docker setup and preconfigured theme"
-authors = [{ name = "Jacek Labudda" }]
+description = "WordPress Docker project generator"
 readme = "README.md"
-license = { text = "MIT" }
 requires-python = ">=3.9"
-keywords = ["wordpress", "docker", "installer", "cli", "wp"]
-dependencies = ["python-dotenv>=1.0.0"]
+license = { text = "MIT" }
+authors = [{ name = "Jacek Labudda" }]
+keywords = ["wordpress", "docker", "cli", "devops"]
+dependencies = [
+    "python-dotenv>=1.0.1",
+]
 
 [project.scripts]
 wp-docker = "wp_docker.cli:main"
 
-[build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_meta"
-
-[tool.setuptools.packages.find]
-where = ["wp_docker"]
-include = ["*"]
+[tool.setuptools]
+packages = ["wp_docker"]
 
 [tool.setuptools.package-data]
-wp_docker = ["templates/**"]
+wp_docker = ["templates/**/*"]
