--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=69", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "wp-docker-cli"
-version = "0.1.3"
+name = "wp-docker"
+version = "0.1.4"
 description = "WordPress Docker project generator"
 readme = "README.md"
 requires-python = ">=3.9"
