--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "wp-docker"
-version = "0.1.4"
+version = "0.1.5"
 description = "WordPress Docker project generator"
 readme = "README.md"
 requires-python = ">=3.9"
@@ -22,4 +22,4 @@ wp-docker = "wp_docker.cli:main"
 packages = ["wp_docker"]
 
 [tool.setuptools.package-data]
-wp_docker = ["templates/**/*"]
+wp_docker = ["templates/**/*", "templates/**/.*"]
